lib/src/sdk/rust/snapshots/usage__sdk__rust__tests__rust_multiple_aliases.snap
---
source: lib/src/sdk/rust/mod.rs
expression: client
---
//! @generated by usage-cli from test.usage.kdl. Do not edit manually.

use crate::runtime::{CliRunner, CliResult};
use crate::types::{ToolFlags};

pub struct Tool {
    runner: CliRunner,
}

impl Tool {
    pub fn new(bin_path: &str) -> Self {
        let runner = CliRunner::new(bin_path);
        Self {
            runner,
        }
    }

    pub fn default_bin() -> Self {
        Self::new("tool")
    }
    /// [-f --format <fmt>]

    pub fn exec(&self, flags: Option<ToolFlags>) -> Result<CliResult, crate::runtime::CliError> {
        let mut cmd_args: Vec<String> = vec![];
        let flag_args = self.build_flag_args(flags);
        cmd_args.extend(flag_args);
        self.runner.run(cmd_args)
    }

    fn build_flag_args(&self, flags: Option<ToolFlags>) -> Vec<String> {
        let mut result = Vec::new();
        let flags = match flags { Some(f) => f, None => return result };
        if let Some(ref v) = flags.format { result.push("--format".to_string()); result.push(v.to_string()); }
        result
    }
}
