lib/src/sdk/rust/snapshots/usage__sdk__rust__tests__rust_optional_arg_empty_flags.snap
---
source: lib/src/sdk/rust/mod.rs
expression: types
---
//! @generated by usage-cli from test.usage.kdl. Do not edit manually.


#[derive(Debug, Clone, Default)]
pub struct AppArgs {
    /// Optional arg without default
    pub name: Option<String>,
}

#[derive(Debug, Clone)]
pub struct CheckArgs {
    /// Required arg
    pub target: String,
    /// Optional arg with default
    /// Default: "quick"
    pub mode: Option<String>,
}
