lib/src/sdk/rust/snapshots/usage__sdk__rust__tests__rust_required_flag_type.snap
---
source: lib/src/sdk/rust/mod.rs
expression: types
---
//! @generated by usage-cli from test.usage.kdl. Do not edit manually.


#[derive(Debug, Clone)]
pub struct ToolFlags {
    /// Auth token
    pub token: String,
}
