lib/src/sdk/rust/snapshots/usage__sdk__rust__tests__rust_runtime.snap
---
source: lib/src/sdk/rust/mod.rs
expression: "get_file(&output, \"runtime.rs\")"
---
//! Runtime module for usage-generated SDK clients. Do not edit manually.
use std::process::Command;

/// Result of a CLI invocation.
#[derive(Debug, Clone)]
pub struct CliResult {
    pub stdout: String,
    pub stderr: String,
    pub exit_code: i32,
}

impl CliResult {
    pub fn ok(&self) -> bool {
        self.exit_code == 0
    }
}

/// Errors that can occur during CLI invocation.
#[derive(Debug)]
pub enum CliError {
    Io(std::io::Error),
    NotFound(String),
}

impl std::fmt::Display for CliError {
    fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        match self {
            CliError::Io(e) => write!(f, "IO error: {e}"),
            CliError::NotFound(bin) => write!(f, "CLI binary not found: {bin}"),
        }
    }
}

impl std::error::Error for CliError {
    fn source(&self) -> Option<&(dyn std::error::Error + 'static)> {
        match self {
            CliError::Io(e) => Some(e),
            CliError::NotFound(_) => None,
        }
    }
}

/// Runs a CLI binary via std::process::Command.
#[derive(Debug, Clone)]
pub struct CliRunner {
    bin_path: String,
}

impl CliRunner {
    pub fn new(bin_path: &str) -> Self {
        Self { bin_path: bin_path.to_string() }
    }

    pub fn run(&self, args: Vec<String>) -> Result<CliResult, CliError> {
        let output = Command::new(&self.bin_path)
            .args(&args)
            .output()
            .map_err(|e| {
                if e.kind() == std::io::ErrorKind::NotFound {
                    CliError::NotFound(self.bin_path.clone())
                } else {
                    CliError::Io(e)
                }
            })?;
        Ok(CliResult {
            stdout: String::from_utf8_lossy(&output.stdout).to_string(),
            stderr: String::from_utf8_lossy(&output.stderr).to_string(),
            exit_code: output.status.code().unwrap_or(1),
        })
    }
}
