lib/src/sdk/rust/snapshots/usage__sdk__rust__tests__rust_types.snap
---
source: lib/src/sdk/rust/mod.rs
expression: "get_file(&output, \"types.rs\")"
---
//! @generated by usage-cli from test.usage.kdl. Do not edit manually.

use std::fmt;


#[derive(Debug, Clone, PartialEq)]
pub enum Arg2Choice {
    Choice1,
    Choice2,
    Choice3,
}

impl fmt::Display for Arg2Choice {
    fn fmt(&self, f: &mut fmt::Formatter<'_>) -> fmt::Result {
        match self {
            Self::Choice1 => write!(f, "choice1"),
            Self::Choice2 => write!(f, "choice2"),
            Self::Choice3 => write!(f, "choice3"),
        }
    }
}

impl Arg2Choice {
    pub fn as_str(&self) -> &'static str {
        match self {
            Self::Choice1 => "choice1",
            Self::Choice2 => "choice2",
            Self::Choice3 => "choice3",
        }
    }
}

#[derive(Debug, Clone, PartialEq)]
pub enum ShellChoice {
    Bash,
    Zsh,
    Fish,
}

impl fmt::Display for ShellChoice {
    fn fmt(&self, f: &mut fmt::Formatter<'_>) -> fmt::Result {
        match self {
            Self::Bash => write!(f, "bash"),
            Self::Zsh => write!(f, "zsh"),
            Self::Fish => write!(f, "fish"),
        }
    }
}

impl ShellChoice {
    pub fn as_str(&self) -> &'static str {
        match self {
            Self::Bash => "bash",
            Self::Zsh => "zsh",
            Self::Fish => "fish",
        }
    }
}

#[derive(Debug, Clone)]
pub struct MycliArgs {
    /// arg1 description
    pub arg1: String,
    /// arg2 description
    /// Default: "default value"
    pub arg2: Option<Arg2Choice>,
    /// arg3 description
    pub arg3: String,
    pub argrest: Vec<String>,
    /// Default: "default value"
    pub with_default: Option<String>,
}

#[derive(Debug, Clone, Default)]
pub struct MycliFlags {
    /// flag1 description
    pub flag1: Option<bool>,
    /// flag2 description
    pub flag2: Option<bool>,
    /// flag3 description
    pub flag3: Option<bool>,
    /// Default: default value
    pub with_default: Option<bool>,
    pub shell: Option<ShellChoice>,
}

#[derive(Debug, Clone)]
pub struct InstallArgs {
    pub plugin: String,
    pub version: String,
}

#[derive(Debug, Clone, Default)]
pub struct InstallFlags {
    /// Short: -g
    pub global: Option<bool>,
    /// Short: -d
    pub dir: Option<String>,
    /// Short: -f
    pub force: Option<bool>,
}
