lib/src/sdk/rust/snapshots/usage__sdk__rust__tests__rust_var_value_flag_with_default.snap
---
source: lib/src/sdk/rust/mod.rs
expression: types
---
//! @generated by usage-cli from test.usage.kdl. Do not edit manually.


#[derive(Debug, Clone, Default)]
pub struct ToolFlags {
    /// Tags. Default: latest
    pub tag: Option<Vec<String>>,
}
